--- a/Uni3P1/style.css
+++ b/Uni3P1/style.css
@@ -22,6 +22,9 @@ li{
     font-size: 18px;
     padding: 10px;
 }
+a{
+    font-weight: bold;
+}
 li:hover{
     background-color: rgba(0, 0, 0, 0.1);
 }
@@ -35,7 +38,7 @@ ul{
     max-width: 40%;
     list-style-type: none;
 }
-.lista a{
+ul a{
     color: orange;
     text-decoration: underline;
 }
