--- a/Uni5/css/style.css
+++ b/Uni5/css/style.css
@@ -5,7 +5,7 @@ body {
     font-family: Lato, sans-serif;
 }
 
-.container{
+.container {
     display: block;
     width: auto;
     margin: 70px auto 0;
@@ -13,27 +13,27 @@ body {
     padding: 0 25px;
 }
 
-ul{
+ul {
     margin: 0;
     padding: 0;
 }
 
-li *{
+li * {
     float: left;
 }
 
 li,
-h3{
+h3 {
     clear: both;
     list-style: none;
 }
 
 input,
-button{
+button {
     outline: none;
 }
 
-button{
+button {
     background: none;
     border: 0px;
     color: #888;
@@ -44,12 +44,12 @@ button{
     cursor: pointer;
 }
 
-button:hover{
+button:hover {
     color: #333;
 }
 
 /* Cabeceras */
-h1{
+h1 {
     color: #333;
     font-weight: 700;
     border-bottom: 3px solid #333;
@@ -59,7 +59,7 @@ h1{
     text-align: center;
 }
 
-h3{
+h3 {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -69,7 +69,7 @@ h3{
     text-transform: uppercase;
 }
 
-input [type="text"] {
+input[type="text"] {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -82,39 +82,39 @@ input [type="text"] {
     color: #888;
 }
 
-input[type="text"]:focus{
+input[type="text"]:focus {
     color: #333;
 }
 
 /* Nueva Tarea */
 label[for="new-task"] {
     display: block;
-    margin:0 0 20px;
+    margin: 0 0 20px;
 }
 
-input#new-task{
+input#new-task {
     float: left;
     width: 318px;
 }
 
-.add:hover{
+.add:hover {
     color: #0fc57c;
 }
 
 /* Listado de tareas */
-li{
+li {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
 }
 
 li > input[type="checkbox"] {
-    margin:0 10px;
+    margin: 0 10px;
     position: relative;
     top: 15px;
 }
 
-li > label{
+li > label {
     font-size: 18px;
     line-height: 40px;
     width: 237px;
@@ -125,17 +125,19 @@ li > input[type="text"] {
     width: 226px;
 }
 
-li > .delete:hover{
+li > .delete:hover {
     color: #cf2323;
 }
 
 /* Completadas */
-#completed-tasks label{
+#completed-tasks label {
     text-decoration: line-through;
     color: #888;
 }
 
 /* Editar Tarea */
+
+/*
 ul li input[type="text"] {
     display: none;
 }
@@ -147,3 +149,17 @@ ul li.edit-mode input[type="text"] {
 ul li.edit-mode label {
     display: none;
 }
+*/
+.hide-input {
+    display: none;
+}
+.show-input{
+    display: block;
+}
+.hide-label {
+    display: none;
+}
+.hide-icon{
+    display: none;
+}
+
